# alexandria

./: .dockerignore  .env.example  Dockerfile  README.md  api.py  app.py  docker-compose.yml  docker-entrypoint.sh  main.py  models.py  pyproject.toml
adminer-plugins/: login-password-less.php
alexandria/: __init__.py  bootstrap.py  config.py  constants.py  extensions.py  filters.py  models.py
alexandria/blueprints/: auth.py  books.py  main.py
alexandria/integrations/: google_books.py
alexandria/services/: books.py  calendar.py  stats.py
alexandria/utils/: covers.py  languages.py  text.py
migrations/: add_crazy_stats.py  add_page_count.py
migrations/versions/: 5dbf1c0fd07d_initial_schema.py  a1b2c3d4e5f6_add_personal_rating_and_notes.py
templates/: 404.html  500.html  _macros.html  base.html  book_detail.html  calendar.html  edit_book.html  index.html  login.html  search.html  stats.html
tests/: conftest.py  test_auth.py  test_books.py  test_covers.py  test_filters.py  test_google_books_cache.py  test_services.py  test_smoke.py
